Fixing alignment on templates page.

--- a/css/www/templates/page.css
+++ b/css/www/templates/page.css
@@ -37,6 +37,11 @@
   margin-top: var(--space-5);
 }
 
+.www-templates-group > ul > li {
+  max-width: 360px;
+}
+
+
 .www-templates-group:target {
   padding-top: var(--space-5);
 }
@@ -50,7 +55,7 @@
 .www-template-preview-img {
   cursor: pointer;
   margin-bottom: var(--space-5);
-  max-width: 360px;
+
 }
 
 .www-template-preview-img:hover::after {
@@ -81,5 +86,32 @@
   }
   .www-header::after {
     display: none;
+  }
+  .www-templates-group > ul {
+    justify-content: center;
+  }
+}
+
+@media (--breakpoint-sm-md) {
+  .www-templates-group > ul {
+    justify-content: space-between;
+  }
+}
+
+@media (--breakpoint-md-lg) {
+  .www-templates-group > ul {
+    justify-content: space-between;
+  }
+}
+
+@media (--breakpoint-md) {
+  .www-templates-group > ul > li {
+    margin: 0 var(--space-1);
+  }
+}
+
+@media (--breakpoint-lg) {
+  .www-templates-group > ul > li {
+    margin: 0 var(--space-3);
   }
 }
